fix form styles so they dont spill out of forms. add / manage popups dont need pure-form, nor formKit

--- a/frontend/src/assets/styles/forms.scss
+++ b/frontend/src/assets/styles/forms.scss
@@ -26,7 +26,6 @@ select,
    box-sizing: border-box;
    box-shadow: none;
    margin-bottom: 0.3em;
-   width: 100%;
 }
 
 .v4-form-help {
@@ -48,6 +47,6 @@ select,
    margin-top: 20px;
 }
 
-textarea.v4-form-input {
+.v4-form-input {
    width: 100%
 }
